--- a/dashboard.html
+++ b/dashboard.html
@@ -7,15 +7,15 @@
     <title>Dashboard | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body class="dashboard-page">
     <nav>
-        <div class="main-logo">
+        <figure class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,173 +23,169 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
-          <input type="checkbox">
+        <section class="menu-toggle">
+            <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <main>
-        <section>
-            <div class="study-monitor">
-                <div class="study-status">
+            <section class="study-monitor">
+                <article class="study-status">
                     <h1>My Dashboard</h1>
-                </div>
-                <div class="study-quartile">
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Overall &#8226</h1>
-                    <div class="nbsa-study-cards">
-                        <div class="nbsa-study-cards-item">
-                            <div class="nbsa-study-cards-info">
+                    <section class="nbsa-study-cards">
+                        <article class="nbsa-study-cards-item">
+                            <article class="nbsa-study-cards-info">
                                 <h2>NBSA Boundary</h2>
-                                <div class="nbsa-study-cards-progress"></div>
-                            </div>
+                                <section class="nbsa-study-cards-progress"></div>
+                            </article>
                             <h2 class="nbsa-study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </article>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 The Entire Year &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Personal Professional Development</h2>
                                 <p><b>12.5</b> EC</p>
                                 <p>Portofolio</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                        </article>
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>IT Personality</h2>
                                 <p><b>2.5</b> EC</p>
                                 <p>Portofolio</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </diarticlev>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Whenever &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Personality 1</h2>
                                 <p><b>1.25</b> EC</p>
                                 <p>Portofolio</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                        </article>
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Personality 2</h2>
                                 <p><b>1.25</b> EC</p>
                                 <p>Portofolio</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </article>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Quartile 1 &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Programme and Career Orientation</h2>
                                 <p><b>2.5</b> EC</p>
                                 <p>Assesment</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                        </article>
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Computer Science Basics</h2>
                                 <p><b>5</b> EC</p>
                                 <p>Written Exam</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                        </article>
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Programming Basics</h2>
                                 <p><b>5</b> EC</p>
                                 <p>Case Study Exam</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </article>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Quartile 2 &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Object Oriented Programming</h2>
                                 <p><b>10</b> EC</p>
                                 <p>Case Study and Project</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </article>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Quartile 3 &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Framework Development 1</h2>
                                 <p><b>5</b> EC</p>
                                 <p>Case Study Exam</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                        </article>
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Framework Project 1</h2>
                                 <p><b>7.5</b> EC</p>
                                 <p>Project, Assessment, and Report</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="study-quartile">
+                        </article>
+                    </section>
+                </article>
+                <article class="study-quartile">
                     <h1>&#8226 Quartile 4 &#8226</h1>
-                    <div class="study-cards">
-                        <div class="study-cards-item">
-                            <div class="study-cards-info">
+                    <section class="study-cards">
+                        <article class="study-cards-item">
+                            <article class="study-cards-info">
                                 <h2>Framework Project 2</h2>
                                 <p><b>10</b> EC</p>
                                 <p>Portofolio, Project, and Assessment</p>
                                 <div class="study-cards-progress"></div>
-                            </div>
+                            </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                        </article>
+                    </section>
+                </article>
+            </section>
     </main>
     <footer>
         <article class="footer-content">
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
