--- a/faq.html
+++ b/faq.html
@@ -14,9 +14,9 @@
 </head>
 <body class="faq-page">
     <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        <figure class="main-logo">
+            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -24,72 +24,71 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <main>
         <section class="faq">
             <h1>Frequently Asked Questions</h1>
-            <div class="faq-container">
-                <div class="faq-accordion">
-                    <div class="faq-accordion-item" id="question1">
+            <section class="faq-container">
+                <section class="faq-accordion">
+                    <article class="faq-accordion-item" id="question1">
                         <a class="faq-accordion-link" href="#question1">
                             How can you print a document from your laptop at HZ?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <div class="faq-answer">
+                        <article class="faq-answer">
                             <p>By Simply connecting to one of the printers at school.</p>
-                        </div>
-                    </div>
-                    <div class="faq-accordion-item" id="question2">
+                        </article>
+                    </article>
+                    <article class="faq-accordion-item" id="question2">
                         <a class="faq-accordion-link" href="#question2">
                             How can you scan a document a send it to your laptop at HZ?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <div class="faq-answer">
+                        <article class="faq-answer">
                             <p>Use the same printer, scan your paper and it should added on yourpc if you do it right.</p>
-                        </div>
-                    </div>
-                    <div class="faq-accordion-item" id="question3">
+                        </article>
+                    </article>
+                    <article class="faq-accordion-item" id="question3">
                         <a class="faq-accordion-link" href="#question3">
                             What do you need to do when you are sick/show symptoms of coronavirus?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <div class="faq-answer">
+                        <article class="faq-answer">
                             <p>Contact the teachers/helpdesk at school and stay home. Follow the lessons on stream to compensate for that unusual sickness.
                             </p>
-                        </div>
-                    </div>
-                    <div class="faq-accordion-item" id="question4">
+                        </article>
+                    </article>
+                    <article class="faq-accordion-item" id="question4">
                         <a class="faq-accordion-link" href="#question4">
                             How can you book a project space in one of the wings?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <div class="faq-answer">
+                        <article class="faq-answer">
                             <p>You can book a room on the HZ page after logging in by pressing the Selfservice Portal, it should be easy from thereon out.</p>
-                        </div>
-                    </div>
-                    <div class="faq-accordion-item" id="question5">
+                        </article>
+                    </article>
+                    <article class="faq-accordion-item" id="question5">
                         <a class="faq-accordion-link" href="#question5">
                             What are the instructions if you want to park your car at the HZ parking lot?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <div class="faq-answer">
-                            <p>You must park your car "across the road", at the parking lot of the former PEZM.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        <article class="faq-answer">
+                            <p>You must park your car "across the road", at the parking lot of the former PEZM.</p>
+                        </article>
+                    </article>
+                </section>
+            </section>
         </section>
     </main>    
     <footer>
