--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <header class="index-header">
             <article class="index-main-text-container">
@@ -55,7 +55,7 @@
                 For more experience see my <a href="blog.html">blog</a>.</p>
                 <h3>My other opinions...</h3>
             </article>
-            <div class="index-row">
+            <section class="index-row">
                 <article class="index-col">
                     <h3>Passion</h3>
                     <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
@@ -68,7 +68,7 @@
                     <h3>Parent Experience</h3>
                     <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
                 </article>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
