--- a/profile.html
+++ b/profile.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <div class="main-logo">
+        <figure class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,42 +23,40 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
-    <div class="profile-header">
-        <div> 
+    <header class="profile-header">
+        <figure> 
             <img src="resources/profile-face.png" class="profile-main-image-container">
-        </div>
-        <div class="profile-main-text-container">
+        </figure>
+        <article class="profile-main-text-container">
             <h1>ALESSANDRO RYO</h1>
             <h2>&#183 A STUDENT &#183</h2>
             <article class="profile-data">
-                 <h4>Date Birth:</h4>
-                 <p>October 19th, 2003</p>
-                 <h4>Country:</h4>
-                 <p>Indonesia</p>
-                 <h4>Phone:</h4>
-                 <p>+62 812 2005 4082</p>
-                 <h4>Email:</h4>
-                 <p>alessandroryo@gmail.com<br>anan0002@hz.nl</p>
-                 <h4>Address:</h4>
-                 <p>Dortsmansstraat 2 4381 CZ Vlissingen</p>
-             </article>
-        </div>
-    </div>
+                <h4>Date Birth:</h4>
+                <p>October 19th, 2003</p>
+                <h4>Country:</h4>
+                <p>Indonesia</p>
+                <h4>Phone:</h4>
+                <p>+62 812 2005 4082</p>
+                <h4>Email:</h4>
+                <p>alessandroryo@gmail.com<br>anan0002@hz.nl</p>
+                <h4>Address:</h4>
+                <p>Dortsmansstraat 2 4381 CZ Vlissingen</p>
+            </article>
+        </article>
+    </header>
     <main>
-        <article class="profile">
-            <article>
-                <h1>Hello! I'm Ryo</h1>
-                <div class="profile-text">
-                    <p>A student and a dreamer. Now, I study at HZ University of Applied Sciences.
-                    On this page, I will give you an overview of myself. I hope you can know more about who I am.</p>
-                </div>
+        <section class="profile">
+            <h1>Hello! I'm Ryo</h1>
+            <article class="profile-text">
+                <p>A student and a dreamer. Now, I study at HZ University of Applied Sciences.
+                On this page, I will give you an overview of myself. I hope you can know more about who I am.</p>
             </article>
             <article div class="profile-row">
                 <article class="profile-col">
@@ -79,7 +77,7 @@
                     I prefer pop genre songs and produce from Indonesia.</p>
                 </article>
             </article>
-        </article> 
+        </section> 
         <article class="edu-title">
             <h2>&#8226 Education &#8226</h2>
         </article>
@@ -103,66 +101,38 @@
                 </ul>
             </article>
         </article>
-    <div class="org-title">
+    <article class="org-title">
         <h2>&#8226 Organization &#8226</h2>
-    </div>
-    <div class="org-container">
-        <div class="org-timeline">
+    </article>
+    <section class="org-container">
+        <article class="org-timeline">
             <ul>
                 <li>
-                    <div class="org-timeline-content">
+                    <article class="org-timeline-content">
                         <h2 class="org-date">2018-2019</h2>
                         <h1>Student Council</h1>
                         <p>Member of IT Division</p>
-                    </div>
+                    </article>
                 </li>
                 <li>
-                    <div class="org-timeline-content">
+                    <article class="org-timeline-content">
                         <h2 class="org-date">2019-2020</h2>
                         <h1>Student Council</h1>
                         <p>Head of IT Division</p>
-                    </div>
+                    </article>
                 </li>
             </ul>
-        </div>
-    </div>
-    <!-- <section class="course">
-        <h1>Hello! I'm Ryo</h1>
-        <p>Pada halaman ini, saya akan memberikan gambaran diri saya kepada kalian.<br>
-            Saya harap kalian bisa lebih tahu siapa diri saya.</p>
-        <div class="course-row">
-            <div class="course-col">
-                <h3>Where do I came from?</h3>
-                <p>Saya berasal dari Indonesia. Salah satu negara dengan banyak kebudayaan
-                dan bahasa.</p>
-            </div>
-            <div class="course-col">
-                <h3>What are my hobbies?</h3>
-                <p>Hobi saya sebenarnya tidak terlalu banyak, namun cukup menyenangkan.
-                Saya sangat menyukai hal apapun tentang sepak bola. Saya juga senang bermain game,
-                terlebih bersama dengan teman-teman. Dan hobi saya yang terakhir adalah tidur.
-                </p>
-            </div>
-            <div class="course-col">
-                <h3>What movie or song do I like?</h3>
-                <p>Film yang paling saya sukai adalah film bergenre sci-fi ataupun action, tapi saya juga
-                terbuka untuk menonton film-film lainnya. Kalau lagu, saya lebih suka lagu bergenre pop dan
-                berasal dari Indonesia.
-                </p>
-            </div>
-        </div>
-    </section> -->
+        </article>
+    </section>
     </main>
     <footer>
         <article class="footer-content">
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
