--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        <figure class="main-logo">
+            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,12 +23,12 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <header class="index-header">
         <div class="index-main-text-container">
@@ -47,11 +47,9 @@
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
