--- a/study-choice.html
+++ b/study-choice.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        <figure class="main-logo">
+            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,58 +23,58 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <header class="index-header">
-        <div class="index-main-text-container">
+        <article class="index-main-text-container">
             <h1>Study<br>Choice</h1>
             <p>A combination of the sections study choice activities,
             motivate your study choice and after completing the study from my SKC document</p>
-        </div>
+        </article>
     </header>
-    <section class="answer">
-        <h1>My Study Choice</h1>
-        <div class="answer-row">
-            <div class="answer-col">
-                <h3>Motivate My Study Choice</h3>
-                <p>Since I was a kid, my father often teach me about computer.
-                    Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
-                    I assume that I can improving my hobby in IT if I choose ICT programme.</p>
-            </div>
-            <div class="answer-col">
-                <h3>After Completing The Study</h3>
-                <p>I have plan to work in big IT company for several years and after that I make my own startup company.
-                My dream is to become CEO in my own company
-                I want to learn about programming, creating start-up company,
-                learn business model of an IT company, and also team work.</p>
-            </div>
-            <div class="answer-col">
-                <h3>Study Choice Activities</h3>
-                <p>I believe in my abilities that I can grow in my current study choice</p>
-            </div>
-        </div>
-    </section>
+    <main>
+        <section class="answer">
+            <h1>My Study Choice</h1>
+            <section class="answer-row">
+                <article class="answer-col">
+                    <h3>Motivate My Study Choice</h3>
+                    <p>Since I was a kid, my father often teach me about computer.
+                        Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
+                        I assume that I can improving my hobby in IT if I choose ICT programme.</p>
+                </article>
+                <article class="answer-col">
+                    <h3>After Completing The Study</h3>
+                    <p>I have plan to work in big IT company for several years and after that I make my own startup company.
+                    My dream is to become CEO in my own company
+                    I want to learn about programming, creating start-up company,
+                    learn business model of an IT company, and also team work.</p>
+                </article>
+                <article class="answer-col">
+                    <h3>Study Choice Activities</h3>
+                    <p>I believe in my abilities that I can grow in my current study choice</p>
+                </article>
+            </section>
+        </section>
+    </main>
     <footer>
         <article class="footer-content">
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer> 
+    </footer>
     <script src="js/script.js"></script>
     </body>
 </html>
