--- a/swot.html
+++ b/swot.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </div>
+        <figure class="main-logo">
+            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,70 +23,70 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
-        <div class="menu-toggle">
+        <section class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </section>
     </nav>
     <header class="index-header">
-        <div class="index-main-text-container">
+        <article class="index-main-text-container">
             <h1>SWOT<br>Analysis</h1>
             <p>By making a SWOT-analysis, I analyze my personal strengths and weaknesses and make an inventory of the
             opportunities and threats I expect in my studies.</p>
-        </div>
+        </article>
     </header>
-    <section class="swot">
-            <div class="swot-card">
-                <h1>Strengths</h1>
-                <span></span>
-                <ul>
-                    <li>Focus</li>
-                    <li>Perfectionist</li>
-                    <li>Diligent</li>
-                    <li>Responsible</li>
-                </ul>
-            </div>
-            <div class="swot-card">
-                <h1>Weaknesses</h1>
-                <span></span>
-                <ul>
-                    <li>Too much thinking</li>
-                    <li>Too ambitious</li>
-                    <li>Less careful person</li>
-                    <li>Slow adaptation</li>
-                </ul>
-            </div>
-            <div class="swot-card">
-                <h1>Opportunities</h1>
-                <span></span>
-                <ul>
-                    <li>Good environment</li>
-                    <li>Family support</li>
-                    <li>Friends support</li>
-                </ul>
-            </div>
-            <div class="swot-card">
-                <h1>Threats</h1>
-                <span></span>
-                <ul>
-                    <li>Different culture</li>
-                    <li>Hanging out</li>
-                    <li>Playing too much</li>
-                </ul>
-            </div>
-    </section>
+    <main>
+        <section class="swot">
+                <article class="swot-card">
+                    <h1>Strengths</h1>
+                    <span></span>
+                    <ul>
+                        <li>Focus</li>
+                        <li>Perfectionist</li>
+                        <li>Diligent</li>
+                        <li>Responsible</li>
+                    </ul>
+                </article>
+                <article class="swot-card">
+                    <h1>Weaknesses</h1>
+                    <span></span>
+                    <ul>
+                        <li>Too much thinking</li>
+                        <li>Too ambitious</li>
+                        <li>Less careful person</li>
+                        <li>Slow adaptation</li>
+                    </ul>
+                </article>
+                <article class="swot-card">
+                    <h1>Opportunities</h1>
+                    <span></span>
+                    <ul>
+                        <li>Good environment</li>
+                        <li>Family support</li>
+                        <li>Friends support</li>
+                    </ul>
+                </article>
+                <article class="swot-card">
+                    <h1>Threats</h1>
+                    <span></span>
+                    <ul>
+                        <li>Different culture</li>
+                        <li>Hanging out</li>
+                        <li>Playing too much</li>
+                    </ul>
+                </article>
+        </section>
+    </main>
     <footer>
         <article class="footer-content">
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
