--- a/faq.html
+++ b/faq.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
+    <script src="https://kit.fontawesome.com/42c532e274.js"></script>
 </head>
 <body class="faq-page">
     <nav>
@@ -96,17 +97,16 @@
             <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://discordapp.com/users/alessandroryo/"><i class="fab fa-discord"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer>
+    </footer> 
     <script src="js/script.js"></script>   
 </body>
 </html>
