--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="course">
+        <section class="answer">
             <h1>Sorry, this page is not available</h1>
             <p></p>
         </section>
