--- a/prog-exp.html
+++ b/prog-exp.html
@@ -33,7 +33,7 @@
     </nav>
     <header class="index-header">
         <div class="index-main-text-container">
-            <h1>Programming<br>Experience</h1>
+            <h1 class="prog-exp-title">Programming<br>Experience</h1>
             <p>Do I have programming experience? How's the story? Check it out!!!</p>
         </div>
     </header>
