--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -33,8 +33,10 @@
     </nav>
     <header class="index-header">
         <div class="index-main-text-container">
-            <h1>SKC<br>First Feedback</h1>
-            <p>My first SKC feedback</p>
+            <section class="answer-title">
+                <h1>SKC<br>First Feedback</h1>
+                <p>My first SKC feedback</p>
+            </section>
         </div>
     </header>
     <main>
