--- a/prog-exp.html
+++ b/prog-exp.html
@@ -33,7 +33,7 @@
     </nav>
     <header class="index-header">
         <div class="index-main-text-container">
-            <section class="prog-exp-title">
+            <section class="answer-title">
                 <h1 >Programming<br>Experience</h1>
                 <p>Do I have programming experience? How's the story? Check it out!!!</p>
             </section>
