--- a/ict-fow.html
+++ b/ict-fow.html
@@ -38,35 +38,14 @@
         </article>
     </header>
     <main>
-        <article class="course">
-            <h1>My Motivation</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.</p>
-            <section class="course-row">
-                <article class="course-col">
-                    <h3>Heading 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                </article>
-                <article class="course-col">
-                    <h3>Heading 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                </article>
-                <article class="course-col">
-                    <h3>Heading 3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                </article>
-            </section>
+        <article class="answer">
+            <h1>ICT Field of Work</h1>
+            <h2>Full Stack Developer</h2>
+            <p>Profesi yang menguasai segala bidang dalam development sebuah aplikasi.
+            Mengerti back-end dan front-end, dan juga perlu mengetahui ilmu lain seperti managemen server,
+            database, API, websocket, dan design UI/UX. Skill yang diperlukan adalah networking, servers,
+            database, qualitative analysis, UX design, security, dan bekerja dengan keperluan customer.
+            Perusahaan yang membutuhkan profesi ini adalah Walmart, IBM, SAP, Paypal.</p>
         </article>
     </main>
     <footer>
